--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -104,7 +104,7 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="http://lib.sinaapp.com/js/jquery/1.10.2/jquery-1.10.2.min.js"></script>
 <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript">
+<script>
     SyntaxHighlighter.defaults['toolbar'] = false;
     SyntaxHighlighter.all()
 </script>
