Signed-off-by: hiclick <hiczx@qq.com>

--- a/lab/plugins/iCheck/all.css
+++ b/lab/plugins/iCheck/all.css
@@ -1,6 +1,6 @@
 /* iCheck plugin skins
 ----------------------------------- */
-@import url("minimal/_all.css");
+@import url("minimal/all.css");
 /*
 @import url("minimal/minimal.css");
 @import url("minimal/red.css");
