--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,8 @@
 
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    /*font-family: 'Montserrat', sans-serif;*/
+    font-family:  "Lucida Grande", "Lucida Sans Unicode", /*"Helvetica Neue", Arial,*/ "Lantinghei SC", "Microsoft YaHei", sans-serif;
     font-weight: 400;
     font-size: 16px;
 
@@ -102,7 +103,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #headerwrap {
 	background: url(../img/back.jpg) no-repeat center top;
-	margin-top: -70px;
+	margin-top: -30px;
 	padding-top: 250px;
 	text-align:center;
 	background-attachment: relative;
