--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,8 +59,8 @@
 
 
 body {
-    font-family: 'Montserrat', sans-serif;
-    /*font-family:  "Lucida Grande", "Lucida Sans Unicode", *//*"Helvetica Neue", Arial,*//* "Lantinghei SC", "Microsoft YaHei", sans-serif;*/
+    /*font-family: 'Montserrat', sans-serif;*/
+    font-family:  "Lucida Grande", "Lucida Sans Unicode", "Helvetica Neue", Arial, "Lantinghei SC", "Microsoft YaHei", sans-serif;
     font-weight: 400;
     font-size: 16px;
 
