--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,3 +229,8 @@ h1, h2, h3, h4, h5, h6 {
 .gallery img:hover {
 	opacity: 0.4;
 }
+
+.justify {
+    text-align:justify;
+    text-justify:newspaper;
+}
