--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,13 +198,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #aboutwrap {	
-	background: url(../img/about-2.jpg) no-repeat center top;
-	margin-top: -70px;
+	background: url(../img/about.jpg) no-repeat center top;
+	margin-top: 0;
 	padding-top: 250px;
 	text-align:center;
 	background-attachment: relative;
 	background-position: center center;
-	min-height: 550px;
+	min-height: 500px;
 	width: 100%;
 	
     -webkit-background-size: 100%;
