Signed-off-by: hiclick <hiczx@qq.com>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,3 +234,7 @@ h1, h2, h3, h4, h5, h6 {
     text-align:justify;
     text-justify:newspaper;
 }
+
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+    color: #b12930 !important;
+}
