--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar-default .navbar-brand {
 	/*color: #1abc9c;*/
-	color: #fff;
+	color: #b12930;
 }
 
 .navbar-default {
@@ -89,14 +89,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	color: #b12930;
+	color: #1abc9c;
 	background-color: transparent;
-	border-bottom: 2px solid #b12930
+	border-bottom: 2px solid #1abc9c
 }
 
 .navbar-default .navbar-nav > li > a {
 	/*color: #1abc9c;*/
-	color: #fff;
+	color: #b12930;
 }
 
 /* ==========================================================================
