--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,7 +242,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-default .navbar-brand {
-    color: #fff !important;
+    color: #b12930 !important;
 }
 
 ul {
