--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,6 +136,12 @@ h1, h2, h3, h4, h5, h6 {
 #headerwrap h4 {
 	font-weight: 400;
 	color: #ffffff;
+    font-size: 25px;
+}
+
+#headerwrap h5 {
+	font-weight: 350;
+	color: #ffffff;
     font-size: 20px;
 }
 
