--- a/assets/css/doc.css
+++ b/assets/css/doc.css
@@ -86,6 +86,7 @@ body {
     margin: 0;
     padding-left: 30px;
     padding-top: 0;
+    list-style: decimal-leading-zero;
 }
 
 #sidebar ul li:before {  /* a hack to have dashes as a list style */
@@ -100,7 +101,6 @@ body {
     margin-bottom: 0.2rem;
     margin-left: 10px;
     padding: 0;
-    list-style: decimal-leading-zero;
     text-indent: -5px;  /* to compensate for the padding for the dash */
     font-size: 0.7rem;
 }
@@ -174,20 +174,21 @@ body {
 
 #content ul {
     display: block;
-    list-style-type: none;
 	padding-top: 0.5rem;
 	padding-bottom:0.5rem;
+    list-style: square;
 }
 
 #content ol {
     display: block;
 	padding-top: 0.5rem;
 	padding-bottom:0.5rem;
+    list-style: decimal-leading-zero;
 }
 
 
 #content ul li:before {  /* a hack to have dashes as a list style */
-    /*content: "-";*/
+    content: " ";
     position: relative;
     left: -5px;
 }
@@ -196,7 +197,6 @@ body {
 #content ol li{
     text-indent: -5px;  /* to compensate for the padding for the dash */
     font-size: 0.8rem;
-    list-style: square;
 }
 
 #content ul li.link,
