启用灰度图像

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,13 +8,11 @@
  * URL: 
  */
 
-
 /* ==========================================================================
    Base Styles, Bootstrap Modifications & Fonts Import
    ========================================================================== */
 
 @import url(http://fonts.useso.com/css?family=Montserrat:400,700);
-
 
 ::-moz-selection {
     background: #f2c2c9;
@@ -32,7 +30,7 @@
  * A better looking default horizontal rule
  */
 
- hr {
+hr {
     display: block;
     height: 1px;
     border: 0;
@@ -42,25 +40,24 @@
 }
 
 .centered {
-	text-align: center
+    text-align: center
 }
 
 .mt {
-	margin-top: 80px;
+    margin-top: 80px;
 }
 
 .mb {
-	margin-bottom: 80px;
+    margin-bottom: 80px;
 }
 
 /* ==========================================================================
    General styles
    ========================================================================== */
 
-
 body {
     /*font-family: 'Montserrat', sans-serif;*/
-    font-family:  "Lucida Grande", "Lucida Sans Unicode", "Helvetica Neue", Arial, "Lantinghei SC", "Microsoft YaHei", sans-serif;
+    font-family: "Lucida Grande", "Lucida Sans Unicode", "Helvetica Neue", Arial, "Lantinghei SC", "Microsoft YaHei", sans-serif;
     font-weight: 400;
     font-size: 16px;
 
@@ -69,34 +66,33 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-weight: 700;
+    font-weight: 700;
     color: #4a4a4a;
 }
 
-
 .navbar-brand {
-	font-weight: 700;
+    font-weight: 700;
 }
 
 .navbar-default .navbar-brand {
-	color: #1abc9c;
-	/*color: #b12930;*/
+    color: #1abc9c;
+    /*color: #b12930;*/
 }
 
 .navbar-default {
-	background-color: transparent;
-	border-color: transparent;
+    background-color: transparent;
+    border-color: transparent;
 }
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	color: #1abc9c;
-	background-color: transparent;
-	border-bottom: 2px solid #1abc9c;
+    color: #1abc9c;
+    background-color: transparent;
+    border-bottom: 2px solid #1abc9c;
 }
 
 .navbar-default .navbar-nav > li > a {
-	color: #1abc9c;
-	/*color: #b12930;*/
+    color: #1abc9c;
+    /*color: #b12930;*/
 }
 
 /* ==========================================================================
@@ -104,15 +100,15 @@ h1, h2, h3, h4, h5, h6 {
    ========================================================================== */
 
 #headerwrap {
-	background: url(../img/back.jpg) no-repeat center top;
-	margin-top: -70px;
-	padding-top: 250px;
-	text-align:center;
-	background-attachment: relative;
-	background-position: center center;
-	min-height: 650px;
-	width: 100%;
-	
+    background: url(../img/back.jpg) no-repeat center top;
+    margin-top: -70px;
+    padding-top: 250px;
+    text-align: center;
+    background-attachment: relative;
+    background-position: center center;
+    min-height: 650px;
+    width: 100%;
+
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
@@ -125,62 +121,62 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #headerwrap h1 {
-	color:#ffffff;
-	padding-top: 10px;
-	padding-bottom: 20px;
-	letter-spacing: 4px;
-	font-size: 50px;
-	font-weight: bold;
+    color: #ffffff;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    letter-spacing: 4px;
+    font-size: 50px;
+    font-weight: bold;
 }
 
 #headerwrap h4 {
-	font-weight: 400;
-	color: #ffffff;
+    font-weight: 400;
+    color: #ffffff;
     font-size: 25px;
 }
 
 #headerwrap h5 {
-	font-weight: 350;
-	color: #ffffff;
+    font-weight: 350;
+    color: #ffffff;
     font-size: 20px;
 }
 
 #social {
-	padding-top: 50px;
-	padding-bottom: 50px;
-	background-color: #f2f2f2;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: #f2f2f2;
 }
 
 #social i {
-	font-size: 40px;
-	color: #4a4a4a
+    font-size: 40px;
+    color: #4a4a4a
 }
 
 #social i:hover {
-	color: #1abc9c
+    color: #1abc9c
 }
 
 #footerwrap {
-	padding-top: 70px;
-	padding-bottom: 50px;
-	background-color: #2f2f2f;
+    padding-top: 70px;
+    padding-bottom: 50px;
+    background-color: #2f2f2f;
 }
 
 #footerwrap p {
-	color: #f2f2f2;
-	margin-left: 10px;
+    color: #f2f2f2;
+    margin-left: 10px;
 }
 
-#workwrap {	
-	background: url(../img/work.jpg) no-repeat center top;
-	margin-top: -70px;
-	padding-top: 240px;
-	text-align:center;
-	background-attachment: relative;
-	background-position: center center;
-	min-height: 650px;
-	width: 100%;
-	
+#workwrap {
+    background: url(../img/work.jpg) no-repeat center top;
+    margin-top: -70px;
+    padding-top: 240px;
+    text-align: center;
+    background-attachment: relative;
+    background-position: center center;
+    min-height: 650px;
+    width: 100%;
+
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
@@ -193,29 +189,29 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #workwrap h1 {
-	color:#ffffff;
-	padding-top: 10px;
-	padding-bottom: 20px;
-	letter-spacing: 4px;
-	font-size: 80px;
-	font-weight: bold;
+    color: #ffffff;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    letter-spacing: 4px;
+    font-size: 80px;
+    font-weight: bold;
 }
 
 #workwrap h4 {
-	font-weight: 400;
-	color: #ffffff
+    font-weight: 400;
+    color: #ffffff
 }
 
-#aboutwrap {	
-	background: url(../img/about.jpg) no-repeat center top;
-	margin-top: 0;
-	padding-top: 250px;
-	text-align:center;
-	background-attachment: relative;
-	background-position: center center;
-	min-height: 500px;
-	width: 100%;
-	
+#aboutwrap {
+    background: url(../img/about.jpg) no-repeat center top;
+    margin-top: 0;
+    padding-top: 250px;
+    text-align: center;
+    background-attachment: relative;
+    background-position: center center;
+    min-height: 500px;
+    width: 100%;
+
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
@@ -227,24 +223,24 @@ h1, h2, h3, h4, h5, h6 {
     background-size: cover;
 }
 
-
 /* Gallery */
 .gallery {
-	margin-top: 30px;
+    margin-top: 30px;
 }
 
 .gallery img:hover {
-	opacity: 0.4;
+    opacity: 0.4;
 }
 
 .justify {
-    text-align:justify;
-    text-justify:newspaper;
+    text-align: justify;
+    text-justify: newspaper;
 }
 
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
     color: #1abc9c !important;
 }
+
 /*
 .navbar-default .navbar-brand {
     color: #b12930 !important;
@@ -274,4 +270,30 @@ http://www.neoease.com/a-tag-css-design/
 #footerwrap a:hover {
     color: #fff;
     text-decoration: none;
+}
+
+
+/*
+
+https://developer.mozilla.org/en-US/docs/Web/CSS/filter
+
+http://demosthenes.info/blog/532/Convert-Images-To-Black-And-White-With-CSS
+
+*/
+
+/**
+This is an experimental technology
+Because this technology's specification has not stabilized
+*/
+
+.docHome img {
+    filter: gray; /* IE6-9 */
+    filter: grayscale(100%); /* Firefox 35+ */
+    -webkit-filter: grayscale(100%); /* Google Chrome, Safari 6+ & Opera 15+ */
+}
+
+/* Disable grayscale on hover */
+.docHome img:hover {
+    filter: none;
+    -webkit-filter: grayscale(0%);
 }
