--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,7 +203,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #aboutwrap {
-    background: url(../img/about.jpg) no-repeat center top;
+    background: url(../img/about.png) no-repeat center top;
     margin-top: 0;
     padding-top: 250px;
     text-align: center;
