--- a/assets/css/doc.css
+++ b/assets/css/doc.css
@@ -375,6 +375,20 @@ kbd {
     box-shadow: inset 0 -1px 0 #bbb;
 }
 
+.key {
+  padding: 0px 5px 2px;
+  border: 1px solid #ddd;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  font-family: Monaco,"DejaVu Sans Mono","Courier New",monospace;
+  font-size: 13px;
+  color: #666;
+}
+
 table.dataintable {
     margin-top: 10px;
     border-collapse: collapse;
