--- a/assets/css/doc.css
+++ b/assets/css/doc.css
@@ -364,6 +364,7 @@ kbd {
     font-weight: bold;
     display: inline-block;
     padding: 3px 5px;
+    margin: 0 5px;
     font: 11px Consolas, "Liberation Mono", Menlo, Courier, monospace;
     line-height: 10px;
     color: #555;
@@ -376,7 +377,8 @@ kbd {
 }
 
 .key {
-  padding: 0px 5px 2px;
+  padding: 0 5px 2px;
+  margin: 0 5px;
   border: 1px solid #ddd;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -448,4 +450,6 @@ p code, li code {
 
 #content iframe {
     margin-left: -10px;
+    margin-top: 10px;
+    margin-bottom: -10px;
 }
