--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -84,3 +84,11 @@ td {
   background: #57A957;
   border: 1px solid #4c964d;
   color: #FFF; }
+
+/*My Style*/
+
+.page-header {
+    padding-bottom: 15px !important;
+    margin: 0 !important;
+    border-bottom: 1px solid #eee;
+}
