--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -92,7 +92,7 @@
 <div id="footer">
     <div class="container">
         <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-            with help from <a href="http://jekyllbootstrap.com" target="_blank"
+            with help from <a href="http://jekyllrb.com/" target="_blank"
                               title="The Definitive Jekyll Blogging Framework">Jekyll</a>
             and <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a>
         </p>
