--- a/assets/css/doc.css
+++ b/assets/css/doc.css
@@ -420,6 +420,45 @@ table.dataintable td, table.confluenceTable td{
     font-size: 12px;
 }
 
+table {
+    padding: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
+    font-size: 1em;
+    font: inherit;
+    border: 0;
+}
+
+tbody {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+table tr {
+    border: 0;
+    border-top: 1px solid #CCC;
+    background-color: white;
+    margin: 0;
+    padding: 0;
+}
+
+table tr:nth-child(2n) {
+    background-color: #F8F8F8;
+}
+
+table tr th, table tr td {
+    font-size: 1em;
+    border: 1px solid #CCC;
+    margin: 0;
+    padding: 0.5em 1em;
+}
+
+table tr th {
+    font-weight: bold;
+    background-color: #F0F0F0;
+}
+
 .ext-link {
     text-indent: -9999px;
     background: url('/assets/img/doc/ecma/ext-link.png') no-repeat center bottom;
