--- a/fav/book/safari/bed-of-state/jscss/cover.css
+++ b/fav/book/safari/bed-of-state/jscss/cover.css
@@ -30,19 +30,19 @@ a.fl:hover { position: relative; top: 1px; left: 1px; text-decoration: underline
 .m4 { font-family: "宋体"; font-size: 10pt; color: #cc6600 }
 .m5 { font-family: "宋体"; font-size: 10.5pt; line-height: 16pt; color: #ffffff }
 .m6 { font-family: "宋体"; font-size: 10pt; color: #003300 }
-img.p1 { filter: alpha(opacity=80); border-style: solid; border-width: 0px; border-color: #e4dcdc #666666 #666666 #e4dcdc }
-.tbottom { width: 100%; height: 24; background-color: #dbdae5 }
+img.p1 { filter: alpha(opacity=80); border-style: solid; border-width: 0; border-color: #e4dcdc #666666 #666666 #e4dcdc }
+.tbottom { width: 100%; height: 24px; background-color: #dbdae5 }
 .dbottom1 { width: 30%; text-align: center; vertical-align: bottom }
 .dbottom2 { width: 30%; text-align: center; vertical-align: bottom }
 .dbottom3 { width: 40%; text-align: center; vertical-align: bottom }
 .time { font-family: "Times New Roman"; font-size: 9pt; background-color: #dbdae5; color: #211e3e }
 .toolbar1 { position: absolute; right: 0; top: expression(document.body.clientHeight-this.style.pixelHeight+document.body.scrollTop-24) }
-.toolbar2 { position: absolute; right: 20; top: expression(document.body.clientHeight-this.style.pixelHeight+document.body.scrollTop-276) }
+.toolbar2 { position: absolute; right: 20px; top: expression(document.body.clientHeight-this.style.pixelHeight+document.body.scrollTop-276) }
 .toolbar3 { position: absolute; left: 0; top: expression(document.body.clientHeight-this.style.pixelHeight+document.body.scrollTop-24) }
 .tlink { width: 0; background-color: #dbdae5 }
 .tmenu { width: 0 }
-.tmenu1 { width: 20; height: 24; background-color: #dbdae5; font-family: "宋体"; font-size: 9pt; color: #211e3e }
-.tmenu2 { width: 352; height: 50; background-color: #; font-family: "Times New Roman"; font-size: 9pt; line-height: 12pt; color: #211e3e; background-image: url(../image/bg_menu2.gif) }
+.tmenu1 { width: 20px; height: 24px; background-color: #dbdae5; font-family: "宋体"; font-size: 9pt; color: #211e3e }
+.tmenu2 { width: 352px; height: 50px; font-family: "Times New Roman"; font-size: 9pt; line-height: 12pt; color: #211e3e; background-image: url(../image/bg_menu2.gif) }
 .menu { position: absolute; left: 0px; top: -55px; width: 0px; height: 0px; z-index: 1; visibility: hidden }
 div { text-align: center }
 p { margin-left: 3.25em; margin-right: 3em }
