--- a/fav/book/safari/bed-of-state/jscss/file.css
+++ b/fav/book/safari/bed-of-state/jscss/file.css
@@ -36,19 +36,19 @@ a.fl:hover { position: relative; top: 1px; left: 1px; text-decoration: underline
 .m4 { font-family: "宋体"; font-size: 9pt; color: #a52a2a }
 .m5 { font-family: "Times New Roman"; font-size: 10.5pt; line-height: 12pt; color: #211e3e }
 .m6 { font-family: "楷体_gb2312"; font-size: 12pt; font-weight: bold; line-height: 16pt; color: #a52a2a }
-.tline_t { height: 2 }
-.tline_b { height: 27 }
-.tt { width: 775 }
-.tm { width: 775; background-color: #dbdae5; background-image: url(../image/bg01.gif) }
-.tb { width: 775 }
+.tline_t { height: 2px }
+.tline_b { height: 27px }
+.tt { width: 775px }
+.tm { width: 775px; background-color: #dbdae5; background-image: url(../image/bg01.gif) }
+.tb { width: 775px }
 .tt1 { height: 0 }
 .tb4 { height: 0 }
 .tt2 { width: 83% }
 .tt4 { height: 0 }
-.tb1 { height: 22 }
+.tb1 { height: 22px }
 .tb3 { width: 83% }
-.tt3 { width: 84%; height: 130 }
-.tb2 { width: 50%; height: 46 }
+.tt3 { width: 84%; height: 130px }
+.tb2 { width: 50%; height: 46px }
 .tm1 { width: 100%; height: 0 }
 .tm2 { width: 100% }
 .tm3 { width: 100% }
@@ -57,10 +57,10 @@ a.fl:hover { position: relative; top: 1px; left: 1px; text-decoration: underline
 .d7 { width: 0; height: 0; background-image: url(../image/07.jpg); text-align: center; vertical-align: middle }
 .d3 { width: 0; height: 0; background-image: url(../image/03.jpg); text-align: center; vertical-align: middle }
 .d9 { width: 0; height: 0; background-image: url(../image/09.jpg); text-align: center; vertical-align: middle }
-.d4 { width: 47; background-image: url(../image/04.jpg) }
-.d6 { width: 47; background-image: url(../image/06.jpg) }
-.d2 { width: 775; height: 210; background-image: url(../image/02.jpg); text-align: center; vertical-align: bottom }
-.d8 { width: 775; height: 145; background-image: url(../image/08.jpg); text-align: center; vertical-align: top }
+.d4 { width: 47px; background-image: url(../image/04.jpg) }
+.d6 { width: 47px; background-image: url(../image/06.jpg) }
+.d2 { width: 775px; height: 210px; background-image: url(../image/02.jpg); text-align: center; vertical-align: bottom }
+.d8 { width: 775px; height: 145px; background-image: url(../image/08.jpg); text-align: center; vertical-align: top }
 .d5 { background-image: url(../image/bg01.gif) }
 .d21 { width: 50%; text-align: left }
 .d22 { width: 50%; text-align: right }
@@ -75,18 +75,18 @@ a.fl:hover { position: relative; top: 1px; left: 1px; text-decoration: underline
 .hr1 { width: 95%; color: #000000 }
 .hr2 { width: 95%; color: #ee9b73 }
 img.p1 { border-style: solid; border-width: 1px; border-color: #000000 #000000 #000000 #000000 }
-.tbottom { width: 100%; height: 24; background-color: #dbdae5 }
+.tbottom { width: 100%; height: 24px; background-color: #dbdae5 }
 .dbottom1 { width: 30%; text-align: center; vertical-align: bottom }
 .dbottom2 { width: 30%; text-align: center; vertical-align: bottom }
 .dbottom3 { width: 40%; text-align: center; vertical-align: bottom }
 .time { font-family: "Times New Roman"; font-size: 9pt; background-color: #dbdae5; color: #211e3e }
 .toolbar1 { position: absolute; right: 0; top: expression(document.body.clientHeight-this.style.pixelHeight+document.body.scrollTop-24) }
-.toolbar2 { position: absolute; right: 20; top: expression(document.body.clientHeight-this.style.pixelHeight+document.body.scrollTop-276) }
+.toolbar2 { position: absolute; right: 20px; top: expression(document.body.clientHeight-this.style.pixelHeight+document.body.scrollTop-276) }
 .toolbar3 { position: absolute; left: 0; top: expression(document.body.clientHeight-this.style.pixelHeight+document.body.scrollTop-24) }
 .tlink { width: 0; background-color: #dbdae5 }
 .tmenu { width: 0 }
-.tmenu1 { width: 20; height: 24; background-color: #dbdae5; font-family: "宋体"; font-size: 9pt; color: #211e3e }
-.tmenu2 { width: 352; height: 50; background-color: #; font-family: "Times New Roman"; font-size: 9pt; line-height: 12pt; color: #211e3e; background-image: url(../image/bg_menu2.gif) }
+.tmenu1 { width: 20px; height: 24px; background-color: #dbdae5; font-family: "宋体"; font-size: 9pt; color: #211e3e }
+.tmenu2 { width: 352px; height: 50px; font-family: "Times New Roman"; font-size: 9pt; line-height: 12pt; color: #211e3e; background-image: url(../image/bg_menu2.gif) }
 .menu { position: absolute; left: 0px; top: -55px; width: 0px; height: 0px; z-index: 1; visibility: hidden }
 div { text-align: center }
 p { margin-left: 3.25em; margin-right: 3em }
